--- a/Interfaz/templates/Base.html
+++ b/Interfaz/templates/Base.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>{% block tittle %}{% endblock %}</title>
-    </head>
-    <body>
-        {% include 'Header.html' %}
-        <main>
-            {% block content %}{% endblock %}
-        </main>
-        {% include 'Footer.html' %}
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block tittle %}{% endblock %}</title>
+</head>
+<body>
+    {% include 'Header.html' %}
+    <main>
+        {% block content %}
+        {% endblock %}
+    </main>
+    {% include 'Footer.html' %}
+</body>
 </html>
