--- a/Interfaz/templates/Header.html
+++ b/Interfaz/templates/Header.html
@@ -1,7 +1,24 @@
-<header>
-   <nav>
-        <p>
-            Esto es el header
-        </p>
-   </nav>
-</header>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">Due Date</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/explore/">Explorar</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/Registrarse/">Registrarse</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/IniciarSesion/">Iniciar sesión</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
