--- a/Interfaz/templates/Base.html
+++ b/Interfaz/templates/Base.html
@@ -68,6 +68,15 @@
     </li>
 
     <li class="nav-item">
+      <a class="nav-link" href="cronometro/">
+        <i class="bi bi-calendar-event-fill"></i> Cronómetro
+      </a>
+      {% if cronometro_page %}
+        
+      {% endif %}
+    </li>
+    
+    <li class="nav-item">
       <a class="nav-link" href="#">
         <i class="bi bi-check-circle-fill"></i> Completadas?
       </a>
