--- a/Interfaz/templates/Base.html
+++ b/Interfaz/templates/Base.html
@@ -68,11 +68,10 @@
     </li>
 
     <li class="nav-item">
-      <a class="nav-link" href="cronometro/">
-        <i class="bi bi-calendar-event-fill"></i> Cronómetro
-      </a>
       {% if cronometro_page %}
-        
+        <a class="nav-link" href="cronometro/">
+          <i class="bi bi-clock-fill"></i> Cronómetro
+        </a>
       {% endif %}
     </li>
     
