--- a/Interfaz/templates/Base.html
+++ b/Interfaz/templates/Base.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
   <link href="{% static 'base.css' %}" rel="stylesheet">
   
+  <link href="{% static 'base.css' %}" rel="stylesheet">
+  
 </head>
 <body>
 
