--- a/Interfaz/templates/Base.html
+++ b/Interfaz/templates/Base.html
@@ -1,4 +1,5 @@
 {% load static wagtailcore_tags %}
+{% load static %}
 {% load wagtailcore_tags %}
 
 <!DOCTYPE html>
@@ -72,7 +73,6 @@
   </ul>
 </aside>
 
-
     <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 py-4">
       {% block content %}{% endblock %}
     </main>
@@ -126,6 +126,8 @@
     </div>
   </div>
 </div>
+
+<script src="{% static 'cronometro.js' %}"></script>
 
 </body>
 </html>
