--- a/Interfaz/templates/cronometro_page.html
+++ b/Interfaz/templates/cronometro_page.html
@@ -1,77 +1,8 @@
 {% extends "Base.html" %}
+{% load static %}
 
 {% block content %}
-    <style>
-        /* AlertifyJS */
-
-        .ajs-button.ajs-ok {
-            background-color: #6a5acd; 
-            color: white; 
-            border-color: #6a5acd;
-            padding: 10px;
-            border-radius: 10px;
-        }
-
-        .ajs-button.ajs-ok:hover {
-            background-color: #342c5f;
-        }
-        .ajs-header, .ajs-body {
-            font-weight: 600;
-        }
-        .ajs-body {
-            padding: 10px;
-            padding-left: 0px;
-            font-size: large;
-        }
-
-        .ajs-close {
-            display: none !important;
-        }
-
-        /* Cronómetro */
-        .text-main-violet { color: #6a5acd !important; }
-        .text-main-black { color: rgb(44, 43, 43) !important; }
-        .btn-main-violet { background-color: #6a5acd !important; border-color: #6a5acd !important; color: #fff !important; }
-        .btn-outline-main-violet { color: #6a5acd !important; border-color: #6a5acd !important; }
-        .text-dark-violet { color: #342c5f !important; }
-        .bg-dark-violet { background-color: #342c5f !important; color: #fff !important; }
-        .bg-green { background-color: #28a745 !important; color: #fff !important; }
-        .text-green { color: #28a745 !important; }
-        
-        .btn-main-violet:hover, .btn-main-violet:focus {
-            background-color: #342c5f !important;
-            border-color: #342c5f !important;
-            color: #fff !important;
-            opacity: 0.9;
-        }
-        
-        .nudge-up {
-            transform: translateY(-10%); 
-        }
-
-        .cronometro-circular {
-            width: 250px;
-            height: 250px;
-            border: 10px solid #6a5acd; 
-            border-radius: 50%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-            margin: 0 auto;
-        }
-        .cronometro-circular #tiempo-visor {
-            font-size: 3.5rem;
-        }
-
-        .cronometro-circular #modo-actual {
-            margin-bottom: 0 !important;
-            font-size: 1.2rem;
-        }
-    </style>
-
-    <div class="d-flex justify-content-center align-items-center min-vh-100 w-100">
+<div class="d-flex justify-content-center align-items-center min-vh-100 w-100">
 
     <div class="container p-4 rounded shadow-lg bg-white nudge-up" style="max-width: 800px;">
         
@@ -135,133 +66,11 @@
             </button>
         </div>
 
-    <script>
-        const tiempoEstudioBase = {{ page.tiempo_estudio.total_seconds|default:3000|floatformat:0 }}; 
-        const tiempoDescansoBase = {{ page.tiempo_descanso.total_seconds|default:600|floatformat:0 }};
-        
-        let tiempoEstudioInicial = tiempoEstudioBase; 
-        let tiempoDescansoInicial = tiempoDescansoBase;
-        
-        let estaCorriendo = false;
-        let esModoEstudio = true;
-        let tiempoRestante = tiempoEstudioInicial;
-        let intervaloTemporizador;
-
-        const visorTiempo = document.getElementById('tiempo-visor');
-        const visorModo = document.getElementById('modo-actual');
-        const btnIniciar = document.getElementById('btn-iniciar');
-        const btnPausar = document.getElementById('btn-pausar');
-        const btnReiniciar = document.getElementById('btn-reiniciar');
-        const inputEstudio = document.getElementById('input-estudio');
-        const inputDescanso = document.getElementById('input-descanso');
-        const btnAceptar = document.getElementById('btn-aceptar');        const modo = document.getElementById('modo');
-        
-        function actualizarVista() {
-            const horas = Math.floor(tiempoRestante / 3600);
-            const segundosDespuesDeHoras = tiempoRestante % 3600;
-            const minutos = Math.floor(segundosDespuesDeHoras / 60);
-            
-            const segundos = segundosDespuesDeHoras % 60;
-            
-            const horasVisor = String(horas).padStart(2, '0');
-            const minutosVisor = String(minutos).padStart(2, '0');
-            const segundosVisor = String(segundos).padStart(2, '0');
-            
-            const visor = `${horasVisor}:${minutosVisor}:${segundosVisor}`;
-                
-            visorTiempo.textContent = visor;
-        }
-
-        function cambiarModo() {
-            esModoEstudio = !esModoEstudio;
-            btnIniciar.disabled = false;
-            
-            if (esModoEstudio) {
-                tiempoRestante = tiempoEstudioInicial;
-                visorModo.innerHTML = "Modo <span class='text-main-violet'>Estudio</span>";
-            } else {
-                tiempoRestante = tiempoDescansoInicial;
-                visorModo.innerHTML = "Modo <span class='text-green'>Descanso</span>";
-            }
-            actualizarVista();
-        }
-        
-        function tic() {
-            if (tiempoRestante > 0) {
-                tiempoRestante--;
-                actualizarVista();
-            } else {
-                // Detiene el temporizador
-                clearInterval(intervaloTemporizador);
-                estaCorriendo = false; 
-
-                let title, text; // varibles para la libreria de alertas
-                const textoDeModo = esModoEstudio ? 'descanso' : 'estudio'; 
-
-                if (esModoEstudio) {
-                    title = "¡Éxito!";
-                    text = "¡Tiempo de <span class='text-main-violet'>estudio</span> terminado! Hora de descansar.";
-                } else {
-                    title = "¡Bien!";
-                    text = "¡<span class='text-green'>Descanso</span> terminado! De vuelta al trabajo.";
-                }
-
-                alertify.alert(title, text, function(){
-                    cambiarModo();
-                    iniciarTemporizador()
-                }).set({
-                    'label': 'Comenzar ' + textoDeModo
-                }); 
-            }
-        }
-
-         function aceptarTiempos() {
-            const nuevoTiempoEstudioMin = parseInt(inputEstudio.value);
-            const nuevoTiempoDescansoMin = parseInt(inputDescanso.value);
-            
-            tiempoEstudioInicial = nuevoTiempoEstudioMin * 60;
-            tiempoDescansoInicial = nuevoTiempoDescansoMin * 60;
-            
-            reiniciarTemporizador();
-            iniciarTemporizador();
-            alertify.success(`Tiempos actualizados: Estudio ${nuevoTiempoEstudioMin} min | Descanso ${nuevoTiempoDescansoMin} min`);
-        }
-
-        function iniciarTemporizador() {
-            if (!estaCorriendo) {
-                estaCorriendo = true;
-                btnIniciar.disabled = true;
-                btnPausar.disabled = false;
-                intervaloTemporizador = setInterval(tic, 1000); 
-            }
-        }
-
-        function pausarTemporizador() {
-            if (estaCorriendo) {
-                estaCorriendo = false;
-                btnIniciar.disabled = false;
-                btnPausar.disabled = true;
-                clearInterval(intervaloTemporizador);
-            }
-        }
-
-        function reiniciarTemporizador() {
-            pausarTemporizador();
-            esModoEstudio = true;
-            tiempoRestante = tiempoEstudioInicial;
-            visorModo.innerHTML = "Modo <span class='text-main-violet'>Estudio</span>";
-            actualizarVista();
-        }
-
-        btnIniciar.addEventListener('click', iniciarTemporizador);
-        btnPausar.addEventListener('click', pausarTemporizador);
-        btnReiniciar.addEventListener('click', reiniciarTemporizador);
-        btnAceptar.addEventListener('click', aceptarTiempos);
-        
-        inputEstudio.value = tiempoEstudioInicial / 60; 
-        inputDescanso.value = tiempoDescansoInicial / 60;
-
-        actualizarVista();
-    </script>
+        <script>
+            const TIEMPO_ESTUDIO_BASE = {{ page.tiempo_estudio.total_seconds|default:3000|floatformat:0 }}; 
+            const TIEMPO_DESCANSO_BASE = {{ page.tiempo_descanso.total_seconds|default:600|floatformat:0 }};
+        </script>
+        <link href="{% static 'cronometro.css' %}" rel="stylesheet">
+    </div>
 </div>
 {% endblock %}
