--- a/Usuarios/templates/registro_page.html
+++ b/Usuarios/templates/registro_page.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load socialaccount %}
 
 <!DOCTYPE html>
 <html lang="es">
@@ -124,7 +125,14 @@
       <button type="submit" class="btn btn-main-violet w-100">
         <i class="bi bi-person-plus-fill me-1"></i> Confirmar
       </button>
+      <br><br>
+      <a href="{% provider_login_url "google" %}" class="btn btn-danger w-100">
+        <i class="bi bi-google me-1"></i> Registrarse con Google
+      </a>
     </form>
+    <div class="text-center mt-3">
+        <a href="{% url 'account_login' %}">¿Ya tenés cuenta? Inicia Sesión</a>
+    </div>
   </div>
 </div>
 
