--- a/Interfaz/templates/Base.html
+++ b/Interfaz/templates/Base.html
@@ -31,6 +31,9 @@
                   <i class="bi bi-box-arrow-right"></i> Cerrar sesión
                 </button>
               </form>
+                <a href="/google/authorize/" class="btn btn-warning btn-sm">
+                  <i class="bi bi-link-45deg"></i> Vincular Google Calendar
+                </a>
             {% else %}
               <a href="{% url 'account_login' %}" class="btn btn-outline-light btn-sm">
                 <i class="bi bi-box-arrow-in-right"></i> Iniciar sesión
@@ -120,6 +123,12 @@
           <div class="mb-3 form-check">
             <label for="reminder" class="form-check-label">Recibir recordatorio</label>
             <input type="checkbox" class="form-check-input" id="reminder" name="reminder">
+          </div>
+          <div class="form-check mt-3">
+            <input class="form-check-input" type="checkbox" id="sync_calendar" name="sync_calendar">
+            <label class="form-check-label" for="sync_calendar">
+              Sincronizar con Google Calendar
+            </label>
           </div>
         </div>
         <div class="modal-footer">
